--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -42,12 +42,12 @@
                         <label for="city">Enter a City</label>
                         <input class="form-control" id="city" type="text" placeholder="Las Vegas">
                         <!-- Bonus Buttons -->
-                        <label for="state">Enter a State</label> -->
-                        <input class="form-control" id="state" type="text" placeholder="NV"> -->
-                        <label for="country">Enter a Country</label> -->
-                        <input class="form-control" id="country" type="text" placeholder="US"> -->
-                        <label for="shape">Enter a Shape</label> -->
-                        <input class="form-control" id="shape" type="text" placeholder="Circle, Triangle, etc."> -->
+                        <label for="state">Enter a State</label>
+                        <input class="form-control" id="state" type="text" placeholder="NV">
+                        <label for="country">Enter a Country</label>
+                        <input class="form-control" id="country" type="text" placeholder="US">
+                        <label for="shape">Enter a Shape</label>
+                        <input class="form-control" id="shape" type="text" placeholder="Circle, Triangle, etc.">
 
                       </li>
                     </ul>
